# Audio-Classification-Musical-Instrument-Recognition

./: 01_Data_Exploration_Visualization.ipynb  02_Data_Preparation_Cleaning.ipynb  03_Feature_Extraction_Model_Training.ipynb  04_Model_Evaluation_Predictions.ipynb  Audio_Project report.docx  README.md  archive_UrbanSound8K_classification.ipynb  audio_utils.py  config.py  pyproject.toml  requirements.txt
saved_models/: audio_classification.hdf5
