[tool.poetry]
name = "audio-classification-musical-instrument-recognition"
version = "0.1.0"
description = "Audio Classification for Musical Instrument Recognition"
authors = ["Robin <robin@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.0"
numpy = "^1.21.0"
matplotlib = "^3.5.0"
scipy = "^1.7.0"
python-speech-features = "^0.6"
librosa = "^0.9.0"
tensorflow = "^2.8.0"
scikit-learn = "^1.0.0"
tqdm = "^4.62.0"
split-folders = "^0.5.1"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"